<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BookLoggerActivity!</string>
    <string name="app_name">ReadingLog</string>
    <string name="empty_list">Log is empty</string>    
    <string name="default_list_name">My Log</string>
    <string name="dialog_firstTime_title">Welcome to ReadingLog!</string>
    <string name="dialog_firstTime_instructions">Scan a book\'s barcode to get started.</string>
    <string name="dialog_rescan_title">Sorry, I couldn\'t find it&#8230;</string>
    <string name="dialog_rescan_instructions">Please check the inside cover of the book for a different barcode, and re-scan.\n\nThis function loads book data from Google Books API, make sure a data connection is active.\n\nTouch cancel to enter the book information yourself.</string>
    <string name="dialog_removebook_title">Remove Book</string>
    <string name="dialog_removebook_instructions">Are you sure you want to remove this book?</string>
  	<string name="dialog_removelist_title">Remove Log</string>
    <string name="dialog_removelist_instructions">Are you sure you want to remove this log?</string>
    <string name="dialog_switch_title">Switch Log</string>
    <string name="dialog_switchlist_instructions">Pick a new log to view.</string>
    <string name="dialog_list_empty">Empty Log</string>
    <string name="dialog_list_empty_instructions">The Log is empty, please add some books and then try again.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="options_menu_addbook">Scan Book</string>
    <string name="options_menu_newentry">Enter Book</string>
    <string name="options_menu_newlist">New Log</string>
    <string name="options_menu_editlist">Edit Log</string>
    <string name="options_menu_switchlist">Switch Log</string>
    <string name="options_menu_sendlist">Share Log</string>
    <string name="options_menu_deletelist">Delete Log</string>
    <string name="context_menu_title">From here you can&#8230;</string>
    <string name="context_menu_details">View/Edit Book Details</string>
    <string name="context_menu_delbook">Remove Book</string>
    <string name="context_menu_cancel">Cancel</string>
    <string name="context_menu_meread">Read by Me</string>
    <string name="context_menu_childread">Read by Child</string>
    <string name="context_menu_parentread">Read by Parent</string>
    <string name="context_menu_parentchildread">Read Together</string>    
    <string name="booklist_edit_title">Reading Log Name</string>        
    <string name="booklist_edit_list_name">Log Name</string>    
    <string name="booklist_edit_save">Save</string>    
    <string name="booklist_edit_cancel">Cancel</string>    
    <string name="manual_entry_activitytitle">Add a Book</string>    
    <string name="manual_entry_title">Title</string>    
    <string name="manual_entry_author">Author</string>
    <string name="manual_entry_save">Save</string>
    <string name="manual_entry_cancel">Cancel</string>
    <string name="button_add_book">Scan Book</string>
    <string name="content_desc_bookthumb">Book Thumbnail</string>    
    <string name="title_delim">-</string>
    <string name="title_books_plural">books</string>
    <string name="title_books_singular">book</string>
    <string name="pdf_eml_extratext">Your reading log is attached in multiple formats (html, csv).</string>
    <string name="pdf_eml_intenttitle">Email the Log.</string>
    <string name="pdf_doc_keywords">Reading Log Android Books Log School Parents</string>    
    <string name="pdf_doc_creator">ReadingLog for Android</string>    
    <string name="pdf_doc_author">ReadingLog for Android</string>    
    <string name="pdf_summary_instructor">Teacher:</string>
    <string name="pdf_summary_student">Student:</string>
    <string name="pdf_summary_total">Total Books:</string>
    <string name="pdf_summary_totalminutes">Total Time:</string>
    <string name="pdf_summary_totalpages">Total Pages:</string>
    <string name="report_col_num">#</string>
    <string name="report_col_date">Date</string>
    <string name="report_col_title">Title</string>
    <string name="report_col_author">Author</string>
    <string name="report_col_activity">Read By</string>
    <string name="report_col_pages">Pages</string>
    <string name="report_col_minutes">Time</string>
    <string name="report_col_comment">Comment</string>
    <string name="report_col_initials">Parent Initials</string>
    <string name="report_val_readbyme">Me</string>
    <string name="report_val_readbychild">Child</string>
    <string name="report_val_readbyparent">Parent</string>
    <string name="report_val_readbyparentchild">Together</string>
    <string name="report_val_pagesread_na">n/a</string>
    <string name="report_val_minutes_na">n/a</string>
    <string name="report_footer_tagline">ReadingLog for Android</string>
    <string name="admob_keywords">book|read|children\'s books|children|education|school|author|student|homework|summer reading</string>
    <string name="admob_pubid">a14e9f5100bf3fb</string>
    <string name="detail_back">Back</string>
    <string name="detail_label_date">Date:</string>
    <string name="detail_label_minutes">Time Spent:</string>
    <string name="detail_label_activity">Who Read This?:</string>
    <string name="detail_label_comment">Comment:</string>
    <string name="detail_hint_minutes">time not tracked</string>
    <string name="detail_hint_pagesread">count not tracked</string>
    <string name="detail_hint_comment">enter a comment</string>
    <string name="detail_label_pagesread">Pages Read:</string>
</resources>
