<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mainmenu_addbook"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/options_menu_addbook"/>
    <item
        android:id="@+id/mainmenu_newentry"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/options_menu_newentry"/>
    <item
        android:id="@+id/mainmenu_sendlist"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/options_menu_sendlist"/>
    <item
        android:id="@+id/mainmenu_switchlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/options_menu_switchlist"/>
    <item
        android:id="@+id/mainmenu_newlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/options_menu_newlist"/>
    <item
        android:id="@+id/mainmenu_editlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/options_menu_editlist"/>
    <item
        android:id="@+id/mainmenu_deletelist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/options_menu_deletelist"/>

</menu>