<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent" android:layout_height="wrap_content">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/booklist_edit_list_name"/>

	<EditText android:id="@+id/booklist_name"
	    android:inputType="text"
		android:layout_width="fill_parent" android:layout_height="0dip"
		android:layout_weight="1" android:scrollbars="vertical" />

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/save" android:text="@string/booklist_edit_save"
			android:layout_width="150dp" android:layout_height="wrap_content" />

		<Button android:id="@+id/cancel" android:text="@string/booklist_edit_cancel"
			android:layout_width="150dp" android:layout_height="wrap_content" />

	</LinearLayout>

</LinearLayout>